# Sift

./: .env.docker  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: README.md  cli.py  config.py  logging_config.py  main.py
app/api/: __init__.py  ai_settings_routes.py  auth.py  batch_routes.py  clip_routes.py  cloud_routes.py  digest_routes.py  download_routes.py  entity_routes.py  export_routes.py  extract_routes.py  job_management_routes.py  knowledge_routes.py  middleware.py  model_routes.py  obsidian_routes.py  prediction_routes.py  ratelimit.py  realtime_routes.py  routes.py  schemas.py  sentiment_routes.py  storage_routes.py  subscription_schemas.py  summarize_routes.py  topic_routes.py  transcript_fetch_routes.py  transcription_routes.py  translation_routes.py
app/bot/: __init__.py  bot.py  webhook.py
app/core/: __init__.py  auth.py  base.py  diarizer.py  digest_runner.py  digest_runner_helpers.py  digest_schema.py  digest_synthesizer.py  downloader.py  embedding_store.py  entity_canonicalizer.py  exceptions.py  job_store.py  knowledge_backfill.py  knowledge_budget.py  knowledge_extractor.py  knowledge_schema.py  llm_presets.py  metadata_tagger.py  note_exporter.py  obsidian_exporter.py  prediction_extractor.py  queue_manager.py  realtime_transcriber.py  storage_manager.py  subscription_fetcher.py  subscription_store.py  subscription_worker.py  topic_aggregator.py  (+8 more)
browser-extension/: README.md  background.js  content.js  manifest.firefox.json  manifest.json  popup.html  popup.js
docs/: README.md  api-endpoints.md  architecture.md  deployment.md  diarization-setup.md  knowledge-schema.md  todo.md  triage.md
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  bun.lockb  index.html  nginx.conf  package.json  vite.config.ts
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
frontend/src-tauri/src/backend/: db.rs  downloader.rs  mod.rs  platform.rs  routes.rs  types.rs
scripts/: build_backend.py  download_ffmpeg.py
tests/: test_api_hardening.py  test_auth.py  test_cloud_persistence.py  test_digest_api.py  test_digest_runner.py  test_digest_store.py  test_digest_synthesis.py  test_embedding_store_search.py  test_embedding_store_unit.py  test_entity_api.py  test_entity_canonicalizer.py  test_export_api.py  test_job_store_annotations.py  test_job_store_batches.py  test_job_store_jobs.py  test_job_store_settings.py  test_knowledge_backfill.py  test_knowledge_backfill_api.py  test_knowledge_backfill_lifecycle.py  test_knowledge_backfill_store.py  test_knowledge_budget.py  test_knowledge_extract_route.py  test_knowledge_extractor.py  test_knowledge_schema.py  test_knowledge_store.py  test_llm_presets.py  test_mcp_client.py  test_mcp_server_tools.py  test_note_exporter.py  test_obsidian_exporter.py  test_parser.py  test_prediction_api.py  test_prediction_extractor.py  test_rate_limits.py  test_topic_aggregator.py  test_topic_api.py  test_topic_canonicalizer.py  test_transcription_engine.py  test_url_validator.py  test_workflow_knowledge_autorun.py
(+54 files in other folders)
