[project]
name = "sift"
version = "0.2.0"
description = "Download audio from X Spaces, Apple Podcasts, and Spotify"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your@email.com"}
]
dependencies = [
    "httpx>=0.27.0",
    "aiofiles>=24.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "cachetools>=5.3.0",
    "feedparser>=6.0.0",
    "python-multipart>=0.0.6",
    "mutagen>=1.47.0",
    "slowapi>=0.1.9",
    "structlog>=24.1.0",
    "tenacity>=8.2.0",
    "sentry-sdk[fastapi]>=1.40.0",
    "litellm>=1.30.0",
    "opencc-python-reimplemented>=0.1.7",
    "youtube-transcript-api>=1.0.0",
    "av>=16.1.0",
    "numpy>=2.2.6",
    "ctranslate2>=4.6.3",
    "onnxruntime>=1.23.2",
    "spotdl>=3.9.6",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]
desktop = [
    "nuitka>=2.1",
    "ordered-set>=4.1.0",
    "zstandard>=0.22.0",
]
transcribe = [
    "faster-whisper>=1.0.0",
]
diarize = [
    "pyannote.audio>=3.1.0",
    "torch>=2.0.0",
]
cloud = [
    "boto3>=1.34.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "dropbox>=12.0.0",
]

[project.scripts]
sift = "app.cli:cli"
sift-api = "app.main:main"
sift-bot = "app.bot:run_bot"
# Backward compatibility aliases
xdownloader = "app.cli:cli"
xdownloader-api = "app.main:main"
xdownloader-bot = "app.bot:run_bot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]
